# genetiak-plus-simulator

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
data/: sim_file1.xlsx  sim_file2.xlsx  sim_file3.xlsx
src/simulator/: ack_consumer.py  db_consumer.py  orm.py  producer.py
test/integration/: test_db_delivery.sh
test/unit/: test_ack_consumer.py
