[build-system]
requires = ["setuptools>=45", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "simulator"
authors = [
    {name = "Ivan Kremnev"}
]
description = "Data pipeline simulator"
readme = "README.md"
dependencies = [
    "confluent-kafka",
    "pandas",
    "openpyxl",
    "sqlalchemy"
]
dynamic = ["version"]

[project.optional-dependencies]
dev = ["ruff", "black"]
test = ["pytest"]

[tool.ruff]
line-length = 120

[tool.black]
line-length = 120